k8s/config/demo-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app
  labels:
    prod-gateway-access: true
