k8s/config/demo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-classes-app
  namespace: demo-app
  labels:
    app: kube-classes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-classes
  template:
    metadata:
      labels:
        app: kube-classes
    spec:
      containers:
        - name: web
          image: ghcr.io/thegostsniperfr/kube-classes:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
