k8s/config/demo-app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app-route
  namespace: demo-app
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway-infra
  hostnames:
    - "demo.192.168.1.100.sslip.io"
  rules:
    - backendRefs:
        - name: kube-classes-svc
          port: 80
