k8s/config/demo-app/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: require-oidc-and-authz
  namespace: demo-app
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: http-app-route

  oidc:
    provider:
      issuer: "https://gitlab.com"
    clientID: "782e46d7a1dff0ddf1d98f2d9cef15ddabd659e0f7c76cb04d9b24eb1839a297"
    clientSecret:
      name: gitlab-application-secret
    redirectURL: "https://demo.192.168.1.100.sslip.io/oauth2/callback"
    logoutPath: "/logout"
    cookieNames:
      idToken: "gitlab-id-token"
    scopes:
      - openid
      - profile
      - email

  jwt:
    providers:
      - name: gitlab-jwt-provider
        issuer: "https://gitlab.com"
        remoteJWKS:
          uri: "https://gitlab.com/oauth/discovery/keys"
        extractFrom:
          cookies:
            - "gitlab-id-token"

  authorization:
    defaultAction: Deny
    rules:
      - name: "allow-specific-ips-and-gitlab-group"
        action: Allow
        principal:
          clientCIDRs:
            - 82.65.250.241/32
            - 10.42.0.0/16
            - 10.0.0.0/16
            - 192.168.42.0/16

          jwt:
            provider: gitlab-jwt-provider
            claims:
              - name: groups_direct
                valueType: StringArray
                values:
                  - "sre"
