k8s/config/demo-app/auth-policies.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: jwt-validation
  namespace: demo-app
spec:
  selector:
    matchLabels:
      app: kube-classes
  jwtRules:
    - issuer: "https://auth.192.168.1.100.sslip.io/realms/kube-lab"
      jwksUri: "http://keycloakx-http.keycloak.svc.cluster.local/realms/kube-lab/protocol/openid-connect/certs"

---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: require-dev-or-admin
  namespace: demo-app
spec:
  selector:
    matchLabels:
      app: kube-classes
  action: ALLOW
  rules:
    - when:
        - key: request.auth.claims[groups]
          values: ["developer", "admin"]
